2007-05-05  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpdrawtool.c (gimp_draw_tool_draw_boundary): fixed
	off-by-one (too large) drawing of boundaries by copying the resp.
	code and its obscure comment from gimpdisplayshell-selection.c
	Fixes bug #416432.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* app/dialogs/tips-dialog.c: make the tips label selectable.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/contactsheet.scm: added missing
	ellipsis to menu label and fixed default fonts.

	* plug-ins/script-fu/scripts/script-fu-set-cmap.scm: added missing
	ellipsis to menu label and corrected menu location.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/autocrop.c (autocrop): crop the image, even if
	the layer is fully opaque. Fixes bug #413906.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/autocrop.c (guess_bgcolor): special case fully
	transparent regions, just as we do in app/core/gimpimage-crop.c.
	Fixes bug #357554.

	* app/core/gimpimage-crop.c: cosmetics.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* app/core/gimpbrush-load.c: applied slightly modified patch from
	Eric Lamarque that adds support for loading .abr v2 Photoshop
	brushes (bug #435635).

2007-05-04  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimpplugin-cleanup.c: removed debug output.

2007-05-04  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/maze/maze.c: reduced the number of progress updates.

2007-05-04  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/edge.c: reduced the number of progress updates.

2007-05-04  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/fractaltrace.c: whoops. fixed progress when
	selections exist.

2007-05-04  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/fractaltrace.c: reduced the number of progress
	updates.

2007-05-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/dog.c: reduced the number of progress updates.

2007-05-04  Sven Neumann  <sven@gimp.org>
