@@ -526,9 +526,14 @@ gimp_curves_tool_map (GimpImageMapTool *image_map_tool)
                   tool->curves,
                   gimp_drawable_bytes (image_map_tool->drawable));
 
-  gimp_image_map_apply (image_map_tool->image_map,
-                        (GimpImageMapApplyFunc) gimp_lut_process,
-                        tool->lut);
+  if (tool->channel == GIMP_HISTOGRAM_VALUE)
+    gimp_image_map_apply (image_map_tool->image_map,
+                          (GimpImageMapApplyFunc) gimp_lut_process_value,
+                          tool->lut);
+  else
+    gimp_image_map_apply (image_map_tool->image_map,
+                          (GimpImageMapApplyFunc) gimp_lut_process,
+                          tool->lut);
 }
 
 
