@@ -283,9 +283,14 @@ gimp_levels_tool_map (GimpImageMapTool *image_map_tool)
 {
   GimpLevelsTool *tool = GIMP_LEVELS_TOOL (image_map_tool);
 
-  gimp_image_map_apply (image_map_tool->image_map,
-                        (GimpImageMapApplyFunc) gimp_lut_process,
-                        tool->lut);
+  if (tool->channel == GIMP_HISTOGRAM_VALUE)
+    gimp_image_map_apply (image_map_tool->image_map,
+                          (GimpImageMapApplyFunc) gimp_lut_process_value,
+                          tool->lut);
+  else
+    gimp_image_map_apply (image_map_tool->image_map,
+                          (GimpImageMapApplyFunc) gimp_lut_process,
+                          tool->lut);
 }
 
 
